18_reverse_str/grade.txt
Grading at Thu Jul 23 11:27:49 UTC 2020
Attempting to compile  reverse.c
reverse.c: In function ‘reverse’:
reverse.c:7:6: error: ‘s’ undeclared (first use in this function)
   if(s==NULL)
      ^
reverse.c:7:6: note: each undeclared identifier is reported only once for each function it appears in
The code did not compile!

Overall Grade: F
